examples/test/testpolicy2686.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2686
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key47: value24
      key39: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value39
      podSelector:
        matchLabels:
          key49: value4
          key13: value16
